[package]
name = "handl"
description = "fURL data handler"
version = "0.1.0"
license = "Unlicense"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.11", features = ["js"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["macro-diagnostics", "v4", "fast-rng"] }
